# claudechic

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.ai-docs/: analytics.md  logging.md  multi-agent-plan.md  remote-testing.md  session-files.md  testing.md
.github/workflows/: docs.yml  release.yml
cc_textual/: __main__.py  app.py  sessions.py  styles.tcss
cc_textual/widgets/: __init__.py  prompts.py  tools.py
claude_alamode/: agent.py  app.py  formatting.py  styles.tcss
claude_alamode/features/worktree/: commands.py  git.py  prompts.py
claude_alamode/widgets/: __init__.py  chat.py  footer.py  todo.py  tools.py
claudechic/: __init__.py  __main__.py  agent.py  agent_manager.py  analytics.py  app.py  commands.py  compact.py  context.md  cursor.py  enums.py  errors.py  file_index.py  formatting.py  help_data.py  history.py  mcp.py  messages.py  permissions.py  processes.py  profiling.py  protocols.py  remote.py  sessions.py  styles.tcss  theme.py  usage.py
claudechic/features/: __init__.py
claudechic/features/diff/: git.py  widgets.py
claudechic/features/roborev/: __init__.py  cli.py  models.py
claudechic/features/worktree/: __init__.py  commands.py  git.py  prompts.py
claudechic/prompts/: reviewer.md
claudechic/screens/: chat.py  diff.py  session.py
claudechic/widgets/: __init__.py  agents.py  autocomplete.py  button.py  chat.py  chat_view.py  collapsible.py  copyable.py  diff.py  footer.py  history_search.py  indicators.py  profile_modal.py  prompts.py  scroll.py  todo.py  tools.py  usage.py
claudechic/widgets/base/: __init__.py
claudechic/widgets/content/: diff.py  message.py  tools.py
claudechic/widgets/input/: autocomplete.py
claudechic/widgets/layout/: __init__.py  chat_view.py  reviews.py  sidebar.py
claudechic/widgets/modals/: process_detail.py
claudechic/widgets/primitives/: collapsible.py  spinner.py
docs/: agent-refactor-design.md  agents.md  architecture.md  compaction.md  index.md  related.md
docs/stylesheets/: extra.css
plans/: refactoring-plan.md
tests/: __init__.py  conftest.py  test_app.py  test_app_ui.py  test_autocomplete.py  test_file_index.py  test_mcp_ask_agent.py  test_roborev.py  test_widgets.py
