[project]
name = "claudechic"
version = "0.1.0"
description = "Claude Chic - A stylish terminal UI for Claude Code"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.75.0",
    "claude-agent-sdk>=0.1.19",
    "psutil>=5.9.0",
    "pyperclip>=1.11.0",
    "textual>=7.1.0",
    "textual-autocomplete>=4.0.6",
]

[project.scripts]
claudechic = "claudechic.__main__:main"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["claudechic*"]

[tool.setuptools.package-data]
claudechic = ["*.tcss"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
